test_scores/negative_dimers/features/P09012.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P09012.pkl.xz